# SerialBridge

./: CMakeLists.txt
cfg/: i2cConfig.h.in  uartConfig.h.in
hw/: led.h
src/: SerialI2CBridge.cpp  SerialUartBridge.cpp
test/: CMakeLists.txt  i2cMirror.cpp  uartMirror.cpp
